--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "canvas-sketch": "^0.7.5",
     "canvas-sketch-util": "^1.10.0",
     "jzz": "^1.5.2",
+    "riso-colors": "^1.0.1",
     "tweakpane": "^3.1.0"
   }
 }
