--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "canvas-sketch": "^0.7.5",
     "canvas-sketch-util": "^1.10.0",
     "d3": "^7.8.5",
+    "ffmpeg": "^0.0.4",
     "jzz": "^1.5.2",
     "riso-colors": "^1.0.1",
     "three": "^0.147.0",
