--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "canvas-sketch": "^0.7.5",
     "canvas-sketch-util": "^1.10.0",
+    "colormap": "^2.3.2",
     "d3": "^7.8.5",
     "ffmpeg": "^0.0.4",
     "jzz": "^1.5.2",
